--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ body{
   align-items: center;
   box-shadow: 0 4px 12px rgba(0,0,0,0.15); 
   min-height: 320px;
+  border-radius: 20px;
 }
 .blok_middle_spec {
   display: flex;
@@ -225,4 +226,5 @@ section {
     height: auto;
   }
 }
+
 
