--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body{
   background-position: center;
   background-size: cover; 
   background-repeat: no-repeat;
-  background: url("https://uploads.onecompiler.io/43ybv2fdn/44289uvgk/Bez%20n%C3%A1zvu.jpg") center/cover no-repeat;
+  background: url("https://i.ibb.co/MkZwCWQ3/Chat-GPT-Image-26-11-2025-22-06-28.png") center/cover no-repeat;
 
 }
 .obrazek_dole {
@@ -226,5 +226,6 @@ section {
     height: auto;
   }
 }
+
 
 
